log
Fri 19 Aug 2022 04:35:35 PM UTC: 
 tests:  0|6
total_score: 0/70
32f40b3
Fri 19 Aug 2022 04:44:08 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |     list->size = 0;
      |         ^~
Compilation failed
44b0a8b
Fri 19 Aug 2022 04:45:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |     list-> head =  NULL;
      |         ^~
list.c:32:26: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List *list = (List *)malloc (sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:34:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |     list->tail = 0;
      |         ^~
list.c:32:26: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List *list = (List *)malloc (sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:35:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |     list ->current = NULL;
      |          ^~
list.c:32:26: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List *list = (List *)malloc (sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e9185fa
Fri 19 Aug 2022 04:45:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |     list-> head =  NULL;
      |         ^~
list.c:32:26: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List *list = (List *)malloc (sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:34:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |     list->tail = NULL;
      |         ^~
list.c:32:26: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List *list = (List *)malloc (sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:35:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |     list ->current = NULL;
      |          ^~
list.c:32:26: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List *list = (List *)malloc (sizeof(list));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8884e8d
Fri 19 Aug 2022 04:46:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f3cea79
Fri 19 Aug 2022 04:51:25 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
041b678
Sat 20 Aug 2022 10:14:28 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
67ba419
Sat 20 Aug 2022 10:15:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
88ed51f
Sat 20 Aug 2022 10:16:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9cadf66
Sat 20 Aug 2022 10:16:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
65e70f3
